<resources>
    <string name="app_name">MarketApp</string>
    <string name="back_button_description">back button</string>
    <string name="default_header_title">TITLE</string>
    <string name="MainHeaderTitle">EPSI</string>
    <string name="mainInfoTextBtn">Info</string>
    <string name="mainButtonProduitsText">Produits</string>
    <string name="headerStudentTitle">Fondville</string>
    <string name="info_etudiant_textView">Info Etudiant</string>
    <string name="info_fondville_tom">Fondville Tom</string>
    <string name="info_mail">tom.fondville@epsi.fr</string>
    <string name="info_groupe">B3 DEV G2 fullstack2</string>
    <string name="studentPictureDescription">StudentPicture</string>
    <string name="epsi_url">http://www.epsi.fr/</string>
    <string name="headerProduitsTitle">Rayons</string>
    <string name="layout_category_name">category name</string>
    <string name="category_name_hint_layout">category name</string>
    <string name="product_picture">ProductPicture</string>
    <string name="product_name_textView">product name</string>
    <string name="description_product_textView">Description :</string>
    <string name="product_details_imageView">image du produit</string>
    <string name="product_details_hint_textView">description :</string>
</resources>