<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentActivity">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/studentPictureDescription"
                android:src="@drawable/profile_picture" />

            <TextView
                style="@style/studentTextView"
                android:layout_marginTop="30dp"
                android:text="@string/info_etudiant_textView"
                android:textStyle="bold" />

            <TextView
                style="@style/studentTextView"
                android:text="@string/info_fondville_tom" />

            <TextView
                style="@style/studentTextView"
                android:text="@string/info_mail" />

            <TextView
                style="@style/studentTextView"
                android:text="@string/info_groupe" />

            <TextView
                android:id="@+id/epsiUrl"
                style="@style/studentTextView"
                android:layout_marginTop="50dp"
                android:textColor="@color/link"
                android:text="@string/epsi_url" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>